<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.RegisterActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="4dp"
        app:helperText="@string/required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/SurnameContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:lines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SurnameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="32dp"
        app:helperText="@string/required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/NameContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerSurname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cognome"
            android:inputType="textEmailAddress"
            android:lines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="32dp"
        app:helperText="@string/required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/phoneContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nome"
            android:inputType="textEmailAddress"
            android:lines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="60dp"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:helperText="@string/required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="16" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="32dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:helperText="@string/required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/passwordContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerCell"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cellulare"
            android:inputType="number"
            android:lines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>